Appending Specific Groups Doesn't Work #46827

Closed
opened 2015-11-20 17:48:18 +01:00 by RDP RDP · 20 comments

System Information
Windows 10
NVIDA GeForce GTX 980

Blender Version
Broken: 2.76b
Worked: 2.75a

Short description of error
When appending groups, certain groups will append, and certain groups will not append at all. No error message is displayed.

Exact steps for others to reproduce the error
Open blender
Shift+F1 to Append
Navigate to "Palm Tree (SERIES).blend"
Select "Group"
Select "Palm Tree Standard (spray\mist)" or "Palm Tree Swanky spray\mist"

Note:
Palm Tree (SERIES).blend
These groups share a lot of elements, so I thought maybe it was the emitters, since other groups in this file append properly, but the "Palm Tree Royale" has the same emitters as the two groups that do not work and it appends in properly.
Linking those groups does not work either. But copying them and pasting them into a new file does.
My coworker has the same problem and he is running on Windows 7.

**System Information** Windows 10 NVIDA GeForce GTX 980 **Blender Version** Broken: 2.76b Worked: 2.75a **Short description of error** When appending groups, certain groups will append, and certain groups will not append at all. No error message is displayed. **Exact steps for others to reproduce the error** Open blender Shift+F1 to Append Navigate to "Palm Tree (SERIES).blend" Select "Group" Select "Palm Tree Standard (spray\mist)" or "Palm Tree Swanky spray\mist" *Note:* [Palm Tree (SERIES).blend](https://archive.blender.org/developer/F256413/Palm_Tree__SERIES_.blend) These groups share a lot of elements, so I thought maybe it was the emitters, since other groups in this file append properly, but the "Palm Tree Royale" has the same emitters as the two groups that do not work and it appends in properly. Linking those groups does not work either. But copying them and pasting them into a new file does. My coworker has the same problem and he is running on Windows 7.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rdp

Added subscriber: @rdp

Added subscriber: @mont29

Added subscriber: @mont29

Can you please try the latest build from our buildbot? Here on linux tried with current master, and all three groups append OK (afaikt)…

Can you please try the latest build from [our buildbot](https://builder.blender.org/download)? Here on linux tried with current master, and all three groups append OK (afaikt)…

Added subscriber: @gun4hire

Added subscriber: @gun4hire

Hi Bastien,

I am the aforementioned co-worker, and am familiar with the issue. Using the latest daily build does not fix the problem.

Hi Bastien, I am the aforementioned co-worker, and am familiar with the issue. Using the latest daily build does not fix the problem.

In that case I need a better (more precise) description of the issue, and a simpler example .blend file, because with what I have so far everything seems to work OK.

Unless this is again a windows-only issue, but I do not see really how this could be here.

In that case I need a better (more precise) description of the issue, and a simpler example .blend file, because with what I have so far everything seems to work OK. Unless this is again a windows-only issue, but I do not see really how this could be here.

Hmm, what operating system are you testing in? I can try and test on Mac OSX later tonight.

Hmm, what operating system are you testing in? I can try and test on Mac OSX later tonight.

Ok, I was able to test on a Mac OSX El Captain, and everything worked fine. No issue on Mac OSX.
This same Mac computer was able to run windows 10 via VM Ware. On the same Mac computer, in Windows, the "Palm Tree Standard (spray\mist)" group failed to append in. This is the 3rd windows computer that showed the issue.

Sorry, I didn't see your first post. So it sounds like there was no issue on Linux. It appears that this is indeed a Windows-only issue.

Ok, I was able to test on a Mac OSX El Captain, and everything worked fine. No issue on Mac OSX. This same Mac computer was able to run windows 10 via VM Ware. On the same Mac computer, in Windows, the "Palm Tree Standard (spray\mist)" group failed to append in. This is the 3rd windows computer that showed the issue. Sorry, I didn't see your first post. So it sounds like there was no issue on Linux. It appears that this is indeed a Windows-only issue.

Well, that’s good and bad news… Good: looks indeed to be windows-specific. Bad: I have to go back to ugly VM again (hoping it will work with recent OGL specs raising even :/ ).

Thanks for checking and feedback.

Well, that’s good and bad news… Good: looks indeed to be windows-specific. Bad: I have to go back to ugly VM again (hoping it will work with recent OGL specs raising even :/ ). Thanks for checking and feedback.

OK, issue confirmed on VM, investigating…

OK, issue confirmed on VM, investigating…
Bastien Montagne self-assigned this 2015-11-24 17:23:04 +01:00

Ah… found the issue… You are using '/' in your group name - very very bad :P

Will try to see how to fix this, but afraid it won’t be that easy… :/

Ah… found the issue… You are using '/' in your group name - very **very** bad :P Will try to see how to fix this, but afraid it won’t be that easy… :/
Author

I did try to unlink the group, regroup it, and call it something else, but it still wouldn't work for me.

I did try to unlink the group, regroup it, and call it something else, but it still wouldn't work for me.

You have to rename groups in lib file (here on win VM after renaming Palm Tree Swanky (spray/mist) to Palm Tree Swanky (spray_mist) I can append it with no problem).

The thing is, we 'windowsify' paths by replacing / with \ on Windows… That’s why you should never use / or \ in blender names, can create troubles when handled as pathnames.

You have to rename groups in lib file (here on win VM after renaming `Palm Tree Swanky (spray/mist)` to `Palm Tree Swanky (spray_mist)` I can append it with no problem). The thing is, we 'windowsify' paths by replacing `/` with `\` on Windows… That’s why you should never use / or \ in blender names, can create troubles when handled as pathnames.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This used to work (2.72 for eg), theres no need to apply path functions on data-block names (BLI_cleanup_file in filelist_readjob_do).

This used to work (2.72 for eg), theres no need to apply path functions on data-block names (`BLI_cleanup_file` in `filelist_readjob_do`).

This issue was referenced by da6578e647

This issue was referenced by da6578e647a749a464e524d3cfe8b11ac66c424f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @PeterBoos

Added subscriber: @PeterBoos

small note did you know for windows file path names you could use / as well, its some kind of compatibilty mode since the Dos age.
You might not need to do such conversions.

small note did you know for windows file path names you could use / as well, its some kind of compatibilty mode since the Dos age. You might not need to do such conversions.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46827
No description provided.